Added Polly packages. still working on implementation

--- a/Portfolio.IU.Wasm/Pages/Category.razor
+++ b/Portfolio.IU.Wasm/Pages/Category.razor
@@ -1,6 +1,7 @@
 ﻿@page "/category"
 
 @inject HttpClient http
+@inject ProjectApiService httpAPI
 @using Portfolio.Shared.ViewModels
 
 <h3>Categories</h3>
