--- a/Portfolio.IU.Wasm/Pages/Resume.razor
+++ b/Portfolio.IU.Wasm/Pages/Resume.razor
@@ -1,3 +1,3 @@
 ﻿@page "/resume"
 
-<img src="images/Stuart_Nielsen_Resume-page-001.jpg"/>
+<embed src="images/Stuart_Nielsen_Resume.pdf" width="100%" height="800"/>
