--- a/Portfolio.IU.Wasm/Pages/EditProjectDetails.razor
+++ b/Portfolio.IU.Wasm/Pages/EditProjectDetails.razor
@@ -44,7 +44,7 @@
     </div>
 
 </div>
-<MarkdownView Content="@projectRequirements" />
+<MarkdownView Content="@htmlProjectRequirements" />
 
 
 @code { [Parameter]
@@ -59,6 +59,7 @@
 
     private string projectName;
     private string projectRequirements;
+    private string htmlProjectRequirements;
     private string projectDesign;
     private DateTime projectCompletionDate;
 
@@ -73,10 +74,11 @@
         SelectedProject = (await http.GetFromJsonAsync<ProjectViewModel>($"/api/project/projectdetails/{Slug}"));
 
         projectName = SelectedProject.Title;
-        projectRequirements =  Markdig.Markdown.ToHtml(SelectedProject.Requirements, new MarkdownPipelineBuilder()
-           .UseAdvancedExtensions()
-           .UseSyntaxHighlighting()
-           .Build()); ;
+        projectRequirements = SelectedProject.Requirements;
+        htmlProjectRequirements = Markdig.Markdown.ToHtml(projectRequirements, new MarkdownPipelineBuilder()
+       .UseAdvancedExtensions()
+       .UseSyntaxHighlighting()
+       .Build()); ;
         projectDesign = SelectedProject.Design;
         projectCompletionDate = SelectedProject.CompletionDate;
     }
@@ -99,6 +101,8 @@
         catch (Exception e)
         {
         }
+
+        await OnInitializedAsync();
     }
 
 
