--- a/Portfolio.IU.Wasm/Pages/ProjectDetails.razor
+++ b/Portfolio.IU.Wasm/Pages/ProjectDetails.razor
@@ -3,6 +3,7 @@
 @using Portfolio.Shared.ViewModels
 @using Portfolio.Shared
 @using Markdig.SyntaxHighlighting
+@using Markdig
 <body>
     <content class="main-article">
         <div class="project-header">
@@ -11,14 +12,14 @@
             <a href="project/projectdetails/edit/@Slug">edit</a>
         </div>
 
-        
+
         <div>
-            <MarkdownView Content="@projectRequirements" />
+            <MarkdownView Content="@htmlProjectRequirements" />
             <MarkdownView Content="@projectDesign" />
         </div>
 
         <hr />
-        <div >
+        <div>
             <div class="category">
                 <div>Language</div>
                 <ListOfLanguages SelectedProject="@SelectedProject" />
@@ -48,6 +49,7 @@
     string newTechnology;
 
     private string projectName;
+    private string htmlProjectRequirements;
     private string projectRequirements;
     private string projectDesign;
     private DateTime projectCompletionDate;
@@ -66,6 +68,13 @@
         projectRequirements = SelectedProject.Requirements;
         projectDesign = SelectedProject.Design;
         projectCompletionDate = SelectedProject.CompletionDate;
+
+
+        htmlProjectRequirements = Markdig.Markdown.ToHtml(projectRequirements, new MarkdownPipelineBuilder()
+       .UseAdvancedExtensions()
+       .UseSyntaxHighlighting()
+       .Build()); ;
+
     }
 
     private async Task updateProject()
@@ -126,6 +135,6 @@
         newTechnology = "";
         await OnInitializedAsync();
     }
-    
+
 
 }
