started abstracting API calls to go through API service

--- a/Portfolio.IU.Wasm/Shared/ListOfProjects.razor
+++ b/Portfolio.IU.Wasm/Shared/ListOfProjects.razor
@@ -1,4 +1,5 @@
 ﻿@inject HttpClient http
+@inject ProjectApiService httpAPI
 @using Portfolio.Shared.ViewModels
 
 <ul>
@@ -27,6 +28,6 @@
 
     private async Task RefreshProjectsAsync()
     {
-        projects = await http.GetFromJsonAsync<IEnumerable<ProjectViewModel>>("/api/project/");
+        projects = await httpAPI.GetProjectsAsync();
     }
 }
