--- a/Portfolio.IU.Wasm/wwwroot/css/app.css
+++ b/Portfolio.IU.Wasm/wwwroot/css/app.css
@@ -10,7 +10,7 @@ a, .btn-link {
 
 .btn-primary {
     color: #fff;
-    background-color: #1b6ec2;
+    background-color: #20a2e2;
     border-color: #1861ac;
 }
 
@@ -181,5 +181,3 @@ app {
         display: block;
     }
 }
-
-
