Authorization restrictions working. can't connect to login portal

--- a/Portfolio.IU.Wasm/Shared/PageHeader.razor
+++ b/Portfolio.IU.Wasm/Shared/PageHeader.razor
@@ -1,4 +1,5 @@
 ﻿
 <div class="top-row px-4">
+    <AccessControl />
     <a href="mailto:nielsen.stuart9@gmail.com" target="_blank" class="ml-md-auto">Contact Me</a>
 </div>
