--- a/Portfolio.IU.Wasm/_Imports.razor
+++ b/Portfolio.IU.Wasm/_Imports.razor
@@ -8,3 +8,5 @@
 @using Portfolio.IU.Wasm
 @using Portfolio.IU.Wasm.Shared
 @using Portfolio.BlazorWasm
+@using Microsoft.AspNetCore.Components.Authorization  
+@using Microsoft.AspNetCore.Authorization
