--- a/Portfolio.IU.Wasm/Pages/EditProjectDetails.razor
+++ b/Portfolio.IU.Wasm/Pages/EditProjectDetails.razor
@@ -1,4 +1,5 @@
 ﻿@page "/project/projectdetails/edit/{Slug}"
+@attribute [Authorize]
 @inject HttpClient http
 @using Portfolio.Shared.ViewModels
 @using Portfolio.Shared
