Added authorization to the Pages and APIs that need them

--- a/Portfolio.IU.Wasm/Pages/Resume.razor
+++ b/Portfolio.IU.Wasm/Pages/Resume.razor
@@ -1,3 +1,4 @@
 ﻿@page "/resume"
+@attribute [Authorize]
 
-<embed src="images/Stuart_Nielsen_Resume.pdf" width="100%" height="800"/>
+<embed src="images/Stuart_Nielsen_Resume.pdf" width="100%" height="800" />
