--- a/Portfolio.IU.Wasm/Pages/Index.razor
+++ b/Portfolio.IU.Wasm/Pages/Index.razor
@@ -3,7 +3,7 @@
 @using Microsoft.Extensions.Configuration
 @using Portfolio.Shared.ViewModels
 @using Portfolio.Shared
-@inject HttpClient http
+@inject ProjectApiService api
 @inject IConfiguration config
 
 
@@ -85,7 +85,7 @@
         };
         try
         {
-            var response = await http.PostAsJsonAsync("/api/project", project);
+            await api.AddProjectAsync(project);
             await RefreshProjectsAsync();
         }
         catch (Exception e)
@@ -96,14 +96,11 @@
 
     private async Task removeProject(ProjectViewModel project)
     {
-        await http.DeleteAsync($"/api/project/deleteproject/{project.Id}");
+        await api.RemoveProjectAsync(project);
         await RefreshProjectsAsync();
     }
 
-    private async Task loadProjects()
-    {
-        var response = await http.GetStringAsync("/api/project/");
-    }
+    
 
     protected override async Task OnInitializedAsync()
     {
@@ -112,6 +109,6 @@
 
     private async Task RefreshProjectsAsync()
     {
-        projects = await http.GetFromJsonAsync<IEnumerable<ProjectViewModel>>("/api/project/");
+        projects = await api.GetProjectsAsync();
     }
 }
